--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
 
         <div id="my-header">
 
-            <header class="site-header" style="background-image: url(img/top-bg.jpg);">
+            <header class="site-header" style="background-image: url(img/top-bg.webp);">
 
                 <div class="top-line">
 
@@ -165,7 +165,7 @@
                                 <a href="#" class="button button-white">Все услуги</a>
                             </div>
                         </div>
-                        <div class="carousel-services-image" style="background-image: url(img/service.jpg);">
+                        <div class="carousel-services-image" style="background-image: url(img/service.webp);">
                         </div>
                     </div>
 
@@ -184,7 +184,7 @@
                                 <a href="#" class="button button-white">Все услуги</a>
                             </div>
                         </div>
-                        <div class="carousel-services-image" style="background-image: url(img/service6.jpg);">
+                        <div class="carousel-services-image" style="background-image: url(img/service6.webp);">
                         </div>
                     </div>
 
@@ -204,7 +204,7 @@
                                 <a href="#" class="button button-white">Все услуги</a>
                             </div>
                         </div>
-                        <div class="carousel-services-image" style="background-image: url(img/service3.jpg);">
+                        <div class="carousel-services-image" style="background-image: url(img/service3.webp);">
                         </div>
                     </div>
 
@@ -223,7 +223,7 @@
                                 <a href="#" class="button button-white">Все услуги</a>
                             </div>
                         </div>
-                        <div class="carousel-services-image" style="background-image: url(img/service4.jpg);">
+                        <div class="carousel-services-image" style="background-image: url(img/service4.webp);">
                         </div>
                     </div>
 
@@ -243,7 +243,7 @@
                                 <a href="#" class="button button-white">Все услуги</a>
                             </div>
                         </div>
-                        <div class="carousel-services-image" style="background-image: url(img/service5.jpg);">
+                        <div class="carousel-services-image" style="background-image: url(img/service5.webp);">
                         </div>
                     </div>
 
@@ -262,7 +262,7 @@
                                 <a href="#" class="button button-white">Все услуги</a>
                             </div>
                         </div>
-                        <div class="carousel-services-image" style="background-image: url(img/service2.jpg);">
+                        <div class="carousel-services-image" style="background-image: url(img/service2.webp);">
                         </div>
                     </div>
 
@@ -272,7 +272,7 @@
             </section>
 
 
-            <section class="s-king inverse section-overlay" style="background-image: url(img/photos/foto-16.jpg);">
+            <section class="s-king inverse section-overlay" style="background-image: url(img/photos/foto-16.webp);">
                 <div class="container">
                     <div class="row">
 
@@ -295,15 +295,15 @@
                                 data-thumbheigths="66" data-thumbborderwidth="4" data-thumbmargin="10"
                                 data-width="100%">
 
-                                <img src="img/photos/small/foto-13.jpg" alt="Фото салона красоты">
-                                <img src="img/photos/small/foto-15.jpg" alt="Фото салона красоты">
-                                <img src="img/photos/small/foto-16.jpg" alt="Фото салона красоты">
-                                <img src="img/photos/small/foto-18.jpg" alt="Фото салона красоты">
-                                <img src="img/photos/small/foto-19.jpg" alt="Фото салона красоты">
-                                <img src="img/photos/small/foto-23.jpg" alt="Фото салона красоты">
-                                <img src="img/photos/small/foto-13.jpg" alt="Фото салона красоты">
-                                <img src="img/photos/small/foto-15.jpg" alt="Фото салона красоты">
-                                <img src="img/photos/small/foto-16.jpg" alt="Фото салона красоты">
+                                <img src="img/photos/small/foto-13.webp" alt="Фото салона красоты">
+                                <img src="img/photos/small/foto-15.webp" alt="Фото салона красоты">
+                                <img src="img/photos/small/foto-16.webp" alt="Фото салона красоты">
+                                <img src="img/photos/small/foto-18.webp" alt="Фото салона красоты">
+                                <img src="img/photos/small/foto-19.webp" alt="Фото салона красоты">
+                                <img src="img/photos/small/foto-23.webp" alt="Фото салона красоты">
+                                <img src="img/photos/small/foto-13.webp" alt="Фото салона красоты">
+                                <img src="img/photos/small/foto-15.webp" alt="Фото салона красоты">
+                                <img src="img/photos/small/foto-16.webp" alt="Фото салона красоты">
                             </div>
 
                         </div>
@@ -311,7 +311,7 @@
                     </div>
             </section>
 
-            <section class="s-call inverse" style="background-image: url(img/starlady70.jpg);">
+            <section class="s-call inverse" style="background-image: url(img/starlady.webp);">
 
                 <div class="container">
                     <div class="row">
@@ -354,7 +354,7 @@
             </section>
 
 
-            <section class="s-review inverse section-overlay" style="background-image: url(img/bg-2.jpg);">
+            <section class="s-review inverse section-overlay" style="background-image: url(img/bg-2.webp);">
 
 
 
@@ -455,7 +455,7 @@
 
             </section>
 
-            <section class="s-partners section-overlay" style="background-image: url(img/bg-3.jpg);">
+            <section class="s-partners section-overlay" style="background-image: url(img/bg-3.webp);">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
